# rodio

./: CHANGELOG.md  Cargo.toml  README.md  codebook.toml  flake.nix
.github/workflows/: ci.yml
examples/: microphone_profiling.rs  resample.rs
src/: common.rs  lib.rs  math.rs  microphone.rs  mixer.rs  queue.rs
src/conversions/: channels.rs  mod.rs  sample.rs  sample_rate.rs
src/conversions/sample_rate/: buffer.rs  builder.rs  mod.rs  rubato.rs  tests.rs  types.rs
src/decoder/: builder.rs  symphonia.rs
src/microphone/: builder.rs
src/mixer/: tests.rs
src/source/: agc.rs  chain.rs  channel_volume.rs  from_iter.rs  mod.rs  spatial.rs  uniform.rs
src/source/automatic_gain_control/: agc.rs  config.rs  helpers.rs  mod.rs  rms.rs  slowdown.rs
src/source/resample/: buffer.rs  builder.rs  mod.rs  rubato.rs
tests/: seek.rs  total_duration.rs  vorbis_test.rs
