[package]
name = "rodio"
version = "0.22.2"
license = "MIT OR Apache-2.0"
description = "Audio playback and recording library"
keywords = ["audio", "playback", "recording", "gamedev"]
repository = "https://github.com/RustAudio/rodio"
documentation = "https://docs.rs/rodio"
exclude = ["assets/**", "tests/**"]
edition = "2021"
rust-version = "1.89"

[features]
default = [
  # Core functionality
  "playback",
  "recording",
  # Audio format support
  "flac",
  "mp3",
  "mp4",
  "vorbis",
  "wav",
  # Platform-specific backends
  "pulseaudio",
  # Performance features
  "simd",
]

# Core functionality features
#
# Enable audio playback
playback = ["dep:cpal"]
# Enable audio recording
recording = ["dep:cpal", "dep:rtrb"]
# Enable writing audio to WAV files
wav_output = ["dep:hound"]
# Enable structured observability and instrumentation
tracing = ["dep:tracing"]
# Experimental features using atomic floating-point operations
experimental = ["dep:atomic_float"]

# Audio generation features
#
# Enable audio dithering
dither = ["noise"]
# Enable noise generation (white noise, pink noise, etc.)
noise = ["rand", "rand_distr"]

# Performance features
#
# Perform all calculations with 64-bit floats (instead of 32)
64bit = []
# Real-time audio thread scheduling
# With the realtime-dbus feature, rtkit arranges the necessary limits over D-Bus on typical desktop systems.
# With the plain realtime feature, you must ensure that rtprio is granted yourself.
# See: https://github.com/RustAudio/cpal#alsa-real-time-priority-promotion
realtime = ["cpal/realtime"]
realtime-dbus = ["cpal/realtime-dbus"]
# SIMD-accelerated audio processing
simd = ["symphonia/opt-simd"]

# Platform-specific features
#
# ASIO backend for Windows
asio = ["cpal/asio"]
# Audio Worklet backend for WebAssembly
audio-worklet = ["cpal/audioworklet"]
# JACK Audio Connection Kit backend
jack = ["cpal/jack"]
# PipeWire backend
pipewire = ["cpal/pipewire"]
# PulseAudio backend
pulseaudio = ["cpal/pulseaudio"]
# WebAssembly backend using wasm-bindgen
wasm-bindgen = ["cpal/wasm-bindgen"]

# Base symphonia feature (doesn't enable any codecs)
# A feature with this name is created implicitly due to other features that reference `symphonia/xxx`
# but we need to make it explicit here so other features can reference it.
symphonia = ["dep:symphonia"]

# To decode an audio source with Rodio, you need to enable the appropriate features for *both* the
# demuxer and the decoder.
#
# Audio files consist of a demuxer (container format) and a decoder (audio codec), for example:
# - .mp3 is an MPEG-1 Audio Layer III file, which is a container format that uses the MP3 codec
# - .mp4 is an MPEG-4 container, typically (but not always) with an AAC-encoded audio stream
# - .ogg is an Ogg container with a Vorbis-encoded audio stream
flac = ["symphonia-flac"]
mp3 = ["symphonia-mp3"]
mp4 = ["symphonia-isomp4", "symphonia-aac"]
vorbis = ["symphonia-ogg", "symphonia-vorbis"]
wav = ["symphonia-wav", "symphonia-pcm"]

# Aliases
aac = ["mp4"]
ogg = ["vorbis"]

# The following features are combinations of demuxers and decoders provided by Symphonia.
# Unless you are developing a generic audio player, this is probably overkill.
symphonia-all = ["symphonia/all-formats", "symphonia/all-codecs"]

# Combination of decoder and native demuxer provided by Symphonia
symphonia-flac = ["symphonia/flac"]
symphonia-mp1 = ["symphonia/mp1"]   # MPEG-1 Audio Layer I
symphonia-mp2 = ["symphonia/mp2"]   # MPEG-1 Audio Layer II
symphonia-mp3 = ["symphonia/mp3"]   # MPEG-1 Audio Layer III

# Combination of all MPEG-1 audio demuxers and decoders provided by Symphonia
symphonia-mpa = ["symphonia/mpa"]

# Formats (demuxers) provided by Symphonia
symphonia-aiff = ["symphonia/aiff"]
symphonia-caf = ["symphonia/caf"]
symphonia-isomp4 = ["symphonia/isomp4"]
symphonia-mkv = ["symphonia/mkv"]
symphonia-ogg = ["symphonia/ogg"]

# Codecs (decoders) provided by Symphonia
symphonia-aac = ["symphonia/aac"]
symphonia-adpcm = ["symphonia/adpcm"]
symphonia-alac = ["symphonia/alac"]
symphonia-pcm = ["symphonia/pcm"]
symphonia-vorbis = ["symphonia/vorbis"]
symphonia-wav = ["symphonia/wav"]

# libopus adapter for Symphonia
symphonia-libopus = ["symphonia", "dep:symphonia-adapter-libopus"]

# Resampling features
#
# Enable FFT-based synchronous resampling as an optimization for fixed-ratio conversions. When
# enabled, conversions between standard sample rates (e.g., 48 kHz and 96 kHz, as well as 44.1 kHz
# and 48 kHz) that simplify to small integer ratios automatically use FFT processing for faster
# processing at the cost of a larger binary.
rubato-fft = ["rubato/fft_resampler"]

# Alternative decoders and demuxers
claxon = ["dep:claxon"]         # FLAC
hound = ["dep:hound"]           # WAV
lewton = ["dep:lewton"]         # Ogg Vorbis
minimp3 = ["dep:minimp3_fixed"] # MP3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options"]

[dependencies]
cpal = { version = "0.18", optional = true }
dasp_sample = "0.11"
claxon = { version = "0.4", optional = true }
hound = { version = "3.5", optional = true }
lewton = { version = "0.10", optional = true }
minimp3_fixed = { version = "0.5.4", optional = true }
symphonia = { version = "0.5.5", optional = true, default-features = false }
crossbeam-channel = { version = "0.5.15", optional = true }
thiserror = "2"

rand = { version = "0.10", optional = true }
rand_distr = { version = "0.6", optional = true }
tracing = { version = "0.1.40", optional = true }

atomic_float = { version = "1.1.0", optional = true }
rtrb = { version = "0.3.2", optional = true }

# Rubato resampling
rubato = { version = "2.0", default-features = false }

symphonia-adapter-libopus = { version = "0.2", optional = true }

[dev-dependencies]
quickcheck = "1"
rstest = "0.26"
rstest_reuse = "0.7"
approx = "0.5.1"
divan = "0.1.14"
inquire = "0.9.3"
symphonia-adapter-fdk-aac = "0.1"
clap = { version = "4", features = ["derive"] }

[[bench]]
name = "effects"
harness = false
required-features = ["wav"]

[[bench]]
name = "conversions"
harness = false
required-features = ["wav"]

[[bench]]
name = "resampler"
harness = false
required-features = ["wav"]

[[bench]]
name = "pipeline"
harness = false
required-features = ["wav"]

[[example]]
name = "automatic_gain_control"
required-features = ["playback", "flac"]

[[example]]
name = "basic"
required-features = ["playback", "vorbis"]

[[example]]
name = "callback_on_end"
required-features = ["playback", "wav"]

[[example]]
name = "custom_config"
required-features = ["playback", "wav"]

[[example]]
name = "distortion"
required-features = ["playback"]

[[example]]
name = "distortion_mp3"
required-features = ["playback", "mp3"]

[[example]]
name = "distortion_wav"
required-features = ["playback", "wav"]

[[example]]
name = "distortion_wav_alternate"
required-features = ["playback", "wav"]

[[example]]
name = "error_callback"
required-features = ["playback"]

[[example]]
name = "into_file"
required-features = ["mp3", "wav_output"]

[[example]]
name = "limit_wav"
required-features = ["playback", "wav"]

[[example]]
name = "low_pass"
required-features = ["playback", "wav"]

[[example]]
name = "microphone"
required-features = ["playback", "recording", "wav_output"]

[[example]]
name = "mix_multiple_sources"
required-features = ["playback"]

[[example]]
name = "music_flac"
required-features = ["playback", "flac"]

[[example]]
name = "music_m4a"
required-features = ["playback", "mp4"]

[[example]]
name = "music_mp3"
required-features = ["playback", "mp3"]

[[example]]
name = "music_ogg"
required-features = ["playback", "vorbis"]

[[example]]
name = "music_wav"
required-features = ["playback", "wav"]

[[example]]
name = "music_opus"
required-features = ["playback", "symphonia-libopus"]

[[example]]
name = "noise_generator"
required-features = ["playback", "noise"]

[[example]]
name = "resample"
required-features = ["playback"]

[[example]]
name = "reverb"
required-features = ["playback", "vorbis"]

[[example]]
name = "seek_mp3"
required-features = ["playback", "mp3"]

[[example]]
name = "signal_generator"
required-features = ["playback"]

[[example]]
name = "spatial"
required-features = ["playback", "vorbis"]

[[example]]
name = "stereo"
required-features = ["playback", "vorbis"]

[[example]]
name = "third_party_codec"
required-features = ["playback", "symphonia", "symphonia-isomp4"]
